# aguaform

./: .gitignore  README.md  pyproject.toml
src/aguaform/: __init__.py  stacks.py
